--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "homepage": "https://github.com/seachicken/inga-ui#readme",
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
     "mustache": "^4.2.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "twind": "^0.16.19"
   }
 }
