--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "render": "node render.js",
     "dev": "npm run render && vite",
-    "build": "npm run render && vite build",
+    "build": "npm run render $npm_config_json && vite build",
     "preview": "vite preview"
   },
   "repository": {
