--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   },
   "homepage": "https://github.com/seachicken/inga-ui#readme",
   "devDependencies": {
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "esquery": "^1.4.0",
     "vite": "^4.0.0"
   },
   "dependencies": {
