--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "render": "node render.js",
     "dev": "npm run render && vite",
+    "test": "node --test",
     "build": "npm run render && vite build",
     "preview": "vite preview"
   },
