--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@twind/core": "^1.1.3",
+    "@twind/preset-autoprefix": "^1.0.7",
+    "@twind/preset-tailwind": "^1.1.4",
+    "@twind/with-web-components": "^1.1.3",
     "twind": "^0.16.19"
   }
 }
